force-app/main/default/objects/Client_Objective__c/Client_Objective__c.object-meta.xml
<CustomObject>
    <label>Client-Objective</label>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>Client-Objective ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>