force-app/main/default/objects/Client_Objective__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <inlineHelpText>Only Active client objectives are available as DTDs during sessions.</inlineHelpText>
    <type>Checkbox</type>
</CustomField>