force-app/main/default/objects/Client_Objective__c/fields/Batch_Last_Tested__c.field-meta.xml
<CustomField>
    <fullName>Batch_Last_Tested__c</fullName>
    <label>Batch Last Tested</label>
    <type>Date</type>
</CustomField>