force-app/main/default/objects/Client_Objective__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Objectives</relationshipLabel>
    <relationshipName>Client_Objectives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>