force-app/main/default/objects/Client_Objective__c/fields/Date_CIP__c.field-meta.xml
<CustomField>
    <fullName>Date_CIP__c</fullName>
    <label>Date CIP</label>
    <type>Date</type>
</CustomField>