force-app/main/default/objects/Client_Objective__c/fields/Days_Since_Tested__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Tested__c</fullName>
    <formula>IF(NOT(ISNULL(Last_Tested__c)), today()-Last_Tested__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Tested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>