force-app/main/default/objects/Client_Objective__c/fields/Days_Since_Tested_Correct__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Tested_Correct__c</fullName>
    <formula>IF(NOT(ISNULL(Last_Tested_Correct__c)), today()-Last_Tested_Correct__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Tested Correct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>