force-app/main/default/objects/Client_Objective__c/fields/Last_Tested_Correct_Session_Link__c.field-meta.xml
<CustomField>
    <fullName>Last_Tested_Correct_Session_Link__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/session__c/&quot;+Last_Tested_Correct_Session__c+&quot;/view&quot;,Last_Tested_Correct_Session_Name__c,&quot;_top&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Tested Correct Session Link</label>
    <inlineHelpText>A link to the Session where this objective was last tested Correct.</inlineHelpText>
    <type>Text</type>
</CustomField>