force-app/main/default/objects/Client_Objective__c/fields/Last_Tested_Session__c.field-meta.xml
<CustomField>
    <fullName>Last_Tested_Session__c</fullName>
    <label>Last Tested Session</label>
    <length>18</length>
    <type>Text</type>
</CustomField>