force-app/main/default/objects/Client_Objective__c/fields/Last_Tested_Session_Link__c.field-meta.xml
<CustomField>
    <fullName>Last_Tested_Session_Link__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/session__c/&quot;+Last_Tested_Session__c+&quot;/view&quot;,Last_Tested_Session_Name__c,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Tested Session Link</label>
    <type>Text</type>
</CustomField>