force-app/main/default/objects/Client_Objective__c/fields/Last_Tested_Session_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Tested_Session_Name__c</fullName>
    <label>Last Tested Session Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>