force-app/main/default/objects/Client_Objective__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <label>Objective</label>
    <referenceTo>Objective__c</referenceTo>
    <relationshipLabel>Client Objectives</relationshipLabel>
    <relationshipName>Client_Objectives</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>