force-app/main/default/objects/Client_Objective__c/fields/Re_Test_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Re_Test_Recommended__c</fullName>
    <formula>AND(case(Frequency__c,
&quot;Twice-Weekly&quot;,if( Days_Since_Tested_Correct__c &gt;3,1,0),
&quot;Weekly&quot;,if( Days_Since_Tested_Correct__c &gt;7,1,0),
&quot;Fortnightly&quot;,if( Days_Since_Tested_Correct__c &gt;14,1,0),
&quot;Monthly&quot;,if( Days_Since_Tested_Correct__c &gt;30,1,0),
0)==1, ispickval(Status__c,&quot;ACQ&quot;),Active__c==true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Re-Test Recommended</label>
    <type>Checkbox</type>
</CustomField>