force-app/main/default/objects/Client_Objective__c/fields/SDId__c.field-meta.xml
<CustomField>
    <fullName>SDId__c</fullName>
    <formula>CASESAFEID(Objective__r.SD__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDId</label>
    <type>Text</type>
</CustomField>