force-app/main/default/objects/Client_Objective__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <formula>TEXT(Objective__r.SD__r.Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage</label>
    <type>Text</type>
</CustomField>