force-app/main/default/objects/Client_Objective__c/fields/stats_timestamp__c.field-meta.xml
<CustomField>
    <fullName>stats_timestamp__c</fullName>
    <inlineHelpText>The Timestamp for last run of Stats Gatherer.</inlineHelpText>
    <label>Statistics Timestamp</label>
    <type>DateTime</type>
</CustomField>