force-app/main/default/objects/Client_Objective__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Client__c</columns>
    <columns>NAME</columns>
    <columns>Objective__c</columns>
    <columns>Program_Name__c</columns>
    <columns>SD_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Frequency__c</columns>
    <columns>Days_Since_Tested_Correct__c</columns>
    <columns>Last_Tested_Correct__c</columns>
    <columns>Re_Test_Recommended__c</columns>
    <columns>Last_Tested__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Batch_Last_Tested__c</columns>
    <columns>Batch_Last_Tested_Correct__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Client__c</field>
        <operation>contains</operation>
        <value>Peterson</value>
    </filters>
    <label>All</label>
</ListView>