force-app/main/default/objects/Client_Objective__c/listViews/Re_Test_Analysis_CHECK.listView-meta.xml
<ListView>
    <fullName>Re_Test_Analysis_CHECK</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Objective_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Frequency__c</columns>
    <columns>Re_Test_Recommended__c</columns>
    <columns>Days_Since_Tested__c</columns>
    <columns>Days_Since_Tested_Correct__c</columns>
    <columns>Last_Tested_Correct__c</columns>
    <columns>Last_Tested__c</columns>
    <columns>Date_Absorbed__c</columns>
    <columns>Date_Acquired__c</columns>
    <columns>Date_CIP__c</columns>
    <columns>Date_Held__c</columns>
    <columns>Date_Introduced__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Re_Test_Recommended__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Client__c</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <label>Re-Test Analysis CHECK</label>
</ListView>